[tool.poetry]
name = "pamsi_ooni"
version = "0.1.0"
description = ""
authors = ["Norbert Cyran <cyran.norbert97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-storage = "^1.26.0"
pyyaml = "^5.3.1"
SQLAlchemy = "^1.3.16"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
